# slack-utils

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  release.yaml
docker/: Dockerfile
src/slackutils/cmd/: main.py
src/slackutils/data/: __init__.py  _contents.py
src/slackutils/files/: __init__.py  _upload.py
src/slackutils/webhook/: __init__.py  _notification.py
