[tool.poetry]
name = "slackutils"
version = "0.3.0"
description = ""
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "slackutils", from = "src/" }]

[tool.poetry.dependencies]
python = "~3.12.0"
slack-sdk = "^3.26.2"
click = "^8.1.7"
s3fs = "^2023.12.2"
pathlibfs = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
slackutils = "slackutils.cmd.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = """
    -s \
    -vv"""
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
