[project]
name = "slackutils"
version = "0.3.1"
description = "A thin wrapper of slack-SDK. This wrapper provides CLI for post messages to Slack."
requires-python = ">=3.12"
dependencies = [
    "slack-sdk>=3.31.0",
    "click>=8.1.7",
    "s3fs>=2024.6.1",
    "pathlibfs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
slackutils = "slackutils.cmd.main:main"

[tool.uv]
dev-dependencies = ["ruff>=0.6.2", "mypy>=1.11.2"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
files = "src/**/*.py"
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
